feat: Week 03 SA1 - Fonts and Spacing

--- a/work_phase_1/css/base.css
+++ b/work_phase_1/css/base.css
@@ -1,3 +1,47 @@
+/* Default text styling */
+
 body {
     font-family: 'Plus Jakarta Sans', sans-serif;
+    line-height: 1.5;
+}
+
+h1 {
+    font-size: 4rem;
+    color: var(--primary-color);
+}
+
+h2 {
+    font-size: 3rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--secondary-color);
+}
+
+h5 {
+    font-size: 0.75rem;
+    font-weight: bold;
+    color: var(--secondary-color);
+}
+
+p {
+    font-size: 1rem;
+}
+
+
+/* Color Scheme */
+
+:root {
+    --primary-color: #999AC6;
+    --secondary-color: #0B3954;
+    --light-color: #FFF9EC;
+    --dark-color: #798071;
+    --bright-color: #FF5A5F;
+    --background-color: #FCFAFA;
 }
