--- a/work_phase_1/css/layout.css
+++ b/work_phase_1/css/layout.css
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 80vw;
     margin: 0 auto;
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
 }
 
 @media (min-width: 768px) {
