--- a/work_phase_1/css/components.css
+++ b/work_phase_1/css/components.css
@@ -31,3 +31,40 @@
         280px → Minimum width before wrapping. */
     }
 }
+
+.button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    display: inline-block;
+    text-decoration: none;
+}
+
+.button-primary {
+    background-color: var(--color-primary);
+    color: white;
+}
+
+.button-secondary {
+    background-color: var(--color-secondary);
+    color: white;
+}
+
+.button-dark {
+    background-color: var(--color-dark);
+    color: white;
+}
+
+.button-bright {
+    background-color: var(--color-bright);
+    color: black;
+}
+
+.button:hover {
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px); 
+    transition: all 0.2s ease-in-out;
+}
