--- a/work_phase_2/css/components.css
+++ b/work_phase_2/css/components.css
@@ -55,6 +55,13 @@
     color: #333;
 }
 
+.assessment-card ul li p {
+    margin-bottom: 8px;
+    list-style-type: disc;
+    color: white;
+    font-size: 0.85rem;
+}
+
 /* assessment-card (generic) end */
 
 .interactive-highlight-stories {
@@ -122,7 +129,7 @@
     border: 2px solid var(--primary-color);
     border-radius: 10px;
     padding: 10px;
-    margin: 10px 0;
+    margin: 30px 0;
     background-color: var(--background-color);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
