--- a/work_phase_3/css/component_skeletons/accordion.css
+++ b/work_phase_3/css/component_skeletons/accordion.css
@@ -32,4 +32,11 @@
 .accordion-item.open .accordion-content {
     padding: 1rem;
     max-height: 500px;
+    border: 1px solid black;
+}
+
+.accordion .nested {
+    margin-left: 1rem;
+    border-left: 3px solid black;
+    padding-left: 1rem;
 }
