--- a/work_phase_3/css/page_css/site_map.css
+++ b/work_phase_3/css/page_css/site_map.css
@@ -2,3 +2,14 @@
     background-color: var(--primary-color);
     color: white;
 }
+
+.accordion.nested .accordion-header {
+    color: white;
+    border-radius: 10px 10px 0 0;
+}
+
+.accordion.nested .accordion-content {
+    color: var(--primary-color);
+    /* border: 1px solid red; */
+    border-radius: 0 0 10px 10px;
+}
