--- a/work_phase_3/css/component_skeletons/gallery.css
+++ b/work_phase_3/css/component_skeletons/gallery.css
@@ -22,7 +22,14 @@
     width: 100%;
     height: auto;
     display: block;
+    object-fit: cover;
+    height: 200px;
 }
+
+.gallery-item img:hover {
+    cursor: pointer;
+}
+
 
 .gallery-item h4 {
     padding: 1rem;
