--- a/work_phase_3/css/components.css
+++ b/work_phase_3/css/components.css
@@ -28,3 +28,23 @@
         font-size: 3rem;
     }
 }
+
+.breadcrumbs-link {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.breadcrumbs-link a {
+    color: var(--color-primary);
+    text-decoration: underline;
+}
+
+.breadcrumbs-link .active {
+    font-weight: bold;
+}
+
+@media (min-width: 768px) {
+    .breadcrumbs-link {
+        display: none
+    }
+}
